--- a/index.html
+++ b/index.html
@@ -6,11 +6,21 @@
 
     <link rel="import" href="x-todos.html">
     <style>
-        body {transition: opacity ease-in 0.2s; }
+        body { font-family: 'RobotoDraft', 'Roboto', sans-serif; transition: opacity ease-in 0.2s; }
         body[unresolved] {opacity: 0; display: block; overflow: hidden; position: relative; }
+
+        x-todos {
+            margin: 55px auto;
+        }
+        h1 {
+            font-size: 2.5em;
+            font-weight: 100;
+            text-align: center;
+        }
     </style>
 </head>
 <body>
+    <h1>Todo web component</h1>
     <x-todos data-theme="blue-grey"></x-todos>
 </body>
 </html>
