Added tabs + close + observer and observable

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>X-TODO | Web component</title>
 
+    <script src="obs.js"></script>
+    <script src="webcomponents.min.js"></script>
     <link rel="import" href="x-todos.html">
     <style>
         body { font-family: 'RobotoDraft', 'Roboto', sans-serif; transition: opacity ease-in 0.2s; }
