--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
 </head>
 <body>
     <h1>Todo web component</h1>
-    <x-todos data-theme="blue-grey"></x-todos>
+    <x-todos data-theme="amber"></x-todos>
 </body>
 </html>
